--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@langchain/core": "^0.1.0",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "groq-sdk": "^0.27.0",
+    "helmet": "^8.1.0",
     "web3": "^4.0.3"
   }
 }
