--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-ejs-layouts": "^2.5.1",
     "groq-sdk": "^0.27.0",
     "helmet": "^8.1.0",
+    "pdfkit": "^0.17.1",
     "web3": "^4.0.3"
   }
 }
